# prime_finder_srk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/prime_finder/: __init__.py  prime.py
tests/: test_prime.py
