[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-finder-srk"
version = "0.1.0"
description = "A Python library for finding the nth prime number"
readme = "README.md"
authors = [{name = "Shaharukh Khan", email = "shaharukh.khan@olakrutrim.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["prime", "numbers", "mathematics"]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
